--- a/exam-mastery/package.json
+++ b/exam-mastery/package.json
@@ -9,6 +9,7 @@
     "@fullcalendar/daygrid": "^6.1.5",
     "@fullcalendar/list": "^6.1.5",
     "@fullcalendar/timegrid": "^6.1.5",
+    "@iconify/react": "^4.1.0",
     "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.15",
     "@mui/x-data-grid": "^6.0.4",
