--- a/Server/package.json
+++ b/Server/package.json
@@ -19,7 +19,8 @@
     "mongoose": "^6.3.0",
     "nodemailer": "^6.7.3",
     "react-redux": "^8.0.1",
-    "redux": "^4.2.0"
+    "redux": "^4.2.0",
+    "xhr2": "^0.2.1"
   },
   "devDependencies": {
     "sass": "^1.50.1"
