--- a/exam-mastery/package.json
+++ b/exam-mastery/package.json
@@ -24,6 +24,7 @@
     "aod": "^1.0.6",
     "aos": "^2.3.4",
     "apexcharts": "^3.37.3",
+    "axios": "^1.3.5",
     "formik": "^2.2.9",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
@@ -34,6 +35,7 @@
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.9",
     "web-vitals": "^2.1.4",
+    "xhr2": "^0.2.1",
     "yup": "^1.0.2"
   },
   "scripts": {
