Added frontend and backend functionality for Admin Page

--- a/exam-mastery/package.json
+++ b/exam-mastery/package.json
@@ -25,6 +25,7 @@
     "aos": "^2.3.4",
     "apexcharts": "^3.37.3",
     "axios": "^1.3.5",
+    "bcrypt": "^5.1.0",
     "formik": "^2.2.9",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
