Added frontend code for Add,Edit and Delete exams for Admin

--- a/exam-mastery/package.json
+++ b/exam-mastery/package.json
@@ -13,6 +13,8 @@
     "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.15",
     "@mui/x-data-grid": "^6.0.4",
+    "@mui/x-data-grid-generator": "^6.2.0",
+    "@mui/x-data-grid-pro": "^6.2.0",
     "@nivo/bar": "^0.80.0",
     "@nivo/core": "^0.80.0",
     "@nivo/geo": "^0.80.0",
