--- a/Server/package.json
+++ b/Server/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
+    "method-override": "^3.0.0",
     "mongoose": "^6.3.0",
     "nodemailer": "^6.7.3",
     "react-redux": "^8.0.1",
