--- a/exam-mastery/package.json
+++ b/exam-mastery/package.json
@@ -30,10 +30,12 @@
     "axios": "^1.3.5",
     "bcrypt": "^5.1.0",
     "formik": "^2.2.9",
+    "framer-motion": "^10.12.4",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
     "react-pro-sidebar": "^0.7.1",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
