--- a/exam-mastery/package.json
+++ b/exam-mastery/package.json
@@ -12,6 +12,7 @@
     "@grammarly/editor-sdk-react": "^2.3.17",
     "@iconify/react": "^4.1.0",
     "@mui/icons-material": "^5.11.11",
+    "@mui/lab": "^5.0.0-alpha.127",
     "@mui/material": "^5.11.15",
     "@mui/x-data-grid": "^6.0.4",
     "@mui/x-data-grid-generator": "^6.2.0",
@@ -31,11 +32,13 @@
     "axios": "^1.3.5",
     "bcrypt": "^5.1.0",
     "formik": "^2.2.9",
+    "framer-motion": "^10.12.4",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
     "react-dom": "^18.2.0",
     "react-full-screen": "^1.1.1",
+    "react-icons": "^4.8.0",
     "react-native": "^0.71.6",
     "react-native-web": "^0.19.4",
     "react-pro-sidebar": "^0.7.1",
