--- a/exam-mastery/package.json
+++ b/exam-mastery/package.json
@@ -31,6 +31,7 @@
     "apexcharts": "^3.37.3",
     "axios": "^1.3.5",
     "bcrypt": "^5.1.0",
+    "bootstrap": "^5.2.3",
     "formik": "^2.2.9",
     "framer-motion": "^10.12.4",
     "prop-types": "^15.8.1",
